fix: get 대신 getFirst 사용